--- a/style.css
+++ b/style.css
@@ -198,7 +198,7 @@ nav.sticky .menu-btn{
   background-size: cover;
  background-repeat: no-repeat;
   font-family: 'Ubuntu', sans-serif;
-  background-image: url("back2.png");
+  background-image: url("3454062.jpg");
   margin: auto;
 }
  
