--- a/style.css
+++ b/style.css
@@ -1079,7 +1079,7 @@ padding: 0px;
 
 
         .card .button {
-          width: 280px;
+          width: auto;
          margin: auto;
         }
 
