--- a/style.css
+++ b/style.css
@@ -222,6 +222,7 @@ nav.sticky .menu-btn{
   font-weight: 600;
   margin-left: -3px;
   padding-top: 10px;
+	text-shadow: 0px 2px 4px #7200f6;
  
 }
 .home .text-three{
