--- a/style.css
+++ b/style.css
@@ -872,7 +872,7 @@ padding: 0px;
 
 }
 
-@media (max-width: 1000px) {
+@media (min-width: 900px) {
   .about .about-details{
     justify-content: center;
     flex-direction: column;
