--- a/style.css
+++ b/style.css
@@ -602,7 +602,7 @@ section .title span::after{
 .card {
     /* min-width: 310px; */
     /* height: 200px; */
-	height: auto;
+	width: auto;
 	height: auto;
     margin: 20px;
     background-color: #f0f0f0;
