--- a/style.css
+++ b/style.css
@@ -1246,8 +1246,10 @@ margin: 120px auto;
   }
   
    .card {
-    height: 150px;
-  width: auto;
+    height: 160px;
+  /* width: auto; */
+	       min-width: 210px;
+    /* height: 200px; */
     margin:  15px auto;
     padding: 20px;
     display: flex;
