--- a/style.css
+++ b/style.css
@@ -1106,8 +1106,11 @@ margin: 120px auto;
     
     margin:  15px auto;
     padding: 20px;
-        height: 150px;
-        width: auto;
+        /* height: 150px;
+        width: auto; */
+	   height: 160px;
+  /* width: auto; */
+	       min-width: 190px;
      display: flex;
     justify-content: center;
     align-items: center;
@@ -1248,7 +1251,7 @@ margin: 120px auto;
    .card {
     height: 160px;
   /* width: auto; */
-	       min-width: 210px;
+	       min-width: 190px;
     /* height: 200px; */
     margin:  15px auto;
     padding: 20px;
