--- a/style.css
+++ b/style.css
@@ -1106,11 +1106,8 @@ margin: 120px auto;
     
     margin:  15px auto;
     padding: 20px;
-        /* height: 150px;
-        width: auto; */
-	   height: 160px;
-  /* width: auto; */
-	       min-width: 190px;
+        height: 150px;
+        width: auto;
      display: flex;
     justify-content: center;
     align-items: center;
